force-app/main/default/objects/Trait_Provider_License_ID__c/Trait_Provider_License_ID__c.object-meta.xml
<CustomObject>
    <label>Trait Provider License ID</label>
    <nameField>
        <label>License ID Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trait Provider License IDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>