force-app/main/default/objects/Trait_Provider_License_ID__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trait Provider License IDs</relationshipLabel>
    <relationshipName>Trait_Provider_License_IDs</relationshipName>
    <type>Lookup</type>
</CustomField>