force-app/main/default/objects/Trait_Provider_License_ID__c/fields/License_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>License_ID_Number__c</fullName>
    <label>License ID Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>