force-app/main/default/objects/Trait_Provider_License_ID__c/fields/Licensee_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Licensee_First_Name__c</fullName>
    <label>Licensee First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>