force-app/main/default/objects/Trait_Provider_License_ID__c/fields/Trait_Provider__c.field-meta.xml
<CustomField>
    <fullName>Trait_Provider__c</fullName>
    <label>Trait Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bayer</fullName>
            </value>
            <value>
                <fullName>Corteva</fullName>
            </value>
            <value>
                <fullName>Syngenta</fullName>
            </value>
            <value>
                <fullName>BASF</fullName>
            </value>
            <value>
                <fullName>Attribute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>