force-app/main/default/objects/Trait_Provider_License_ID__c/recordTypes/Trait_Provider.recordType-meta.xml
<RecordType>
    <fullName>Trait_Provider</fullName>
    <active>true</active>
    <label>Trait Provider</label>
</RecordType>